--- a/guides/src/content/release_notes/3_7_0.md
+++ b/guides/src/content/release_notes/3_7_0.md
@@ -4,27 +4,29 @@ section: release_notes
 order: 0
 ---
 
+# Spree 3.7.0 Release Notes
+
 ## Major/New Features
 
 3.7 release is our last 3.x line release bridging the gap between 3.x and Spree 4.0. This is a big release packed with several amazing features and a huge number of bug fixes ([over 700 commits by 17 contributors](https://github.com/spree/spree/compare/3-6-stable...3-7-stable)!). Upgrading to 3.7 guarantees a smooth and easy migration to [Spree 4.0](https://github.com/spree/spree/milestone/37) (April 2019 with Rails 6.0 support).
 
-Spree 3.7 requires Rails 5.2.2 and Ruby 2.3.3 (or higher).
+**Spree 3.7** requires **Rails 5.2.2** and **Ruby 2.3.3** (or higher).
 
-### [Storefront API v2](https://spree-guides.now.sh/api/v2/storefront)
+### [Storefront API v2](/api/v2/storefront)
 
 We've worked hard over the last few months to deliver a completely new, easy to work with and lightweight REST API for building amazing customer interfaces with modern JavaScript libraries (React, Vue, Angular) and for native mobile apps. New Storefront API v2 is fast, easy to use and extend. It's also well documented in [OpenAPI 3.0 (Swagger) format](https://raw.githubusercontent.com/spree/spree/master/api/docs/v2/storefront/index.yaml) which you can [import into Postman app](http://blog.getpostman.com/2018/12/11/postman-supports-openapi-3-0/).
 
-New API is based on [JSON API](https://jsonapi.org/) spec and uses blazing fast Netflix [fast_json_api](https://github.com/Netflix/fast_jsonapi) serializer library. [Authentication](https://spree-guides.now.sh/api/v2/authentication) is based on Oauth using [doorkeeper](https://github.com/doorkeeper-gem/doorkeeper) library. Besides that there are no additional dependencies making it lightweight and future-proof.
+New API is based on [JSON API](https://jsonapi.org/) spec and uses blazing fast Netflix [fast_json_api](https://github.com/Netflix/fast_jsonapi) serializer library. [Authentication](/api/v2/authentication) is based on Oauth using [doorkeeper](https://github.com/doorkeeper-gem/doorkeeper) library. Besides that there are no additional dependencies making it lightweight and future-proof.
 
 Storefront API v2 consists of:
 
-- [Cart endpoints](https://spree-guides.now.sh/api/v2/storefront#tag/Cart) (Create Cart, Add Item, Set Quantity, Remove Item, Empty Cart)
-- [Checkout endpoints](https://spree-guides.now.sh/api/v2/storefront#tag/Checkout) (Update Checkout, Advance Checkout, Complete Checkout, Get Shiping Rates, Get Payment Methods)
-- [Products](https://spree-guides.now.sh/api/v2/storefront/#tag/Products) Catalog
-- [Taxons](https://spree-guides.now.sh/api/v2/storefront/#tag/Taxons) Catalog
-- [Account](https://spree-guides.now.sh/api/v2/storefront#tag/Account) (Account Information, Credit Cards)
-- [Countries](https://spree-guides.now.sh/api/v2/storefront/#tag/Countries)
-- [Authentication](https://spree-guides.now.sh/api/v2/authentication)
+- [Cart endpoints](/api/v2/storefront#tag/Cart) (Create Cart, Add Item, Set Quantity, Remove Item, Empty Cart)
+- [Checkout endpoints](/api/v2/storefront#tag/Checkout) (Update Checkout, Advance Checkout, Complete Checkout, Get Shiping Rates, Get Payment Methods)
+- [Products](/api/v2/storefront/#tag/Products) Catalog
+- [Taxons](/api/v2/storefront/#tag/Taxons) Catalog
+- [Account](/api/v2/storefront#tag/Account) (Account Information, Credit Cards)
+- [Countries](/api/v2/storefront/#tag/Countries)
+- [Authentication](/api/v2/authentication)
 
 All of the endpoints support JSON API's [Sparse Fieldsets](https://jsonapi.org/format/#fetching-sparse-fieldsets) to fix usual Over-Fetching issues and [Related Resources](https://jsonapi.org/format/#fetching-includes) to reduce the number of API queries you need to perform.
 
@@ -37,6 +39,12 @@ We're in the process of moving domain-specific code from models to `Service Obje
 Also, we're moving away from ransack library by introducing `Finders` and `Sorters` classes for simpler fetching resources and collections.
 
 This makes Spree codebase easier to read and learn. It also makes any customizations way easier. At the same time, public APIs won't change a lot as providing backward compatibility is one of our top priorities.
+
+### Dependencies system
+
+We're introducing a new painless way of customizing Spree without the need of decorators. With Dependencies you can easily replace parts of Spree internals with your custom classes. You can replace Services, Abilities and Serializers. More will come in the future. We hope using Dependencies will remove the need for creating decorators at all!
+
+[See Documentation](/developer/customization/dependencies.html)
 
 ### Removing Coffee Script
 
