--- a/guides/src/content/release_notes/3_7_0.md
+++ b/guides/src/content/release_notes/3_7_0.md
@@ -59,8 +59,8 @@ A lot of merchants were using Spree with MySQL for years now, but development of
 ### Add Spree gems to Gemfile
 
 ```ruby
-gem 'spree', '~> 3.7.0.rc1'
-gem 'spree_auth_devise', '~> 3.4'
+gem 'spree', '~> 3.7.0'
+gem 'spree_auth_devise', '~> 3.5'
 gem 'spree_gateway', '~> 3.4'
 ```
 
