--- a/docs/developer/core-concepts/promotions.mdx
+++ b/docs/developer/core-concepts/promotions.mdx
@@ -4,21 +4,23 @@ title: Promotions
 
 ## Overview
 
-Promotions within Spree are used to provide discounts to orders, as well as to add potential additional items at no extra cost. Promotions are one of the most complex areas within Spree, as there are a large number of moving parts to consider. Although this guide will explain Promotions from a developer's perspective, if you are new to this area you can learn a lot from the Admin &gt; Promotions tab where you can set up new Promotions, edit rules & actions, etc.
+Promotions within Spree are used to provide discounts to orders, offer free shipping or to add potential additional items at no extra cost (eg. samples).
+
+Promotions are one of the most complex areas within Spree, as there are a large number of moving parts to consider. Although this guide will explain Promotions from a developer's perspective, if you are new to this area you can learn a lot from the Admin &gt; Promotions tab where you can set up new Promotions, edit rules & actions, etc.
 
 Promotions can be activated in three different ways:
 
-* When a user adds a product to their cart
+* When a user adds a product to their cart (automatic promotions, eg. free shipping with a threshold)
 * When a user enters a coupon code during the checkout process
-* When a user visits a page within the Spree store
+* When a user visits a page within the Spree store (path-based promotions, eg. a promotion that offers a discount on a specific page)
 
-Promotions for these individual ways are activated through their corresponding `PromotionHandler` class, once they've been checked for eligibility.
+Promotions for these individual ways are activated through their corresponding [PromotionHandler class](https://github.com/spree/spree/tree/main/core/app/models/spree/promotion_handler), once they've been checked for eligibility.
 
 Promotions relate to two other main components: `actions` and `rules`. When a promotion is activated, the actions for the promotion are performed, passing in the payload from the `fire_event` call that triggered the activator becoming active. Rules are used to determine if a promotion meets certain criteria in order to be applicable.
 
 In some special cases where a promotion has a `code` or a `path` configured for it, the promotion will only be activated if the payload's code or path match the promotion's. The `code` attribute is used for promotion codes, where a user must enter a code to receive the promotion, and the `path` attribute is used to apply a promotion once a user has visited a specific path.
 
- Path-based promotions will only work when the `Spree::PromotionHandler::Page` class is used, as in `Spree::ContentController` from `spree_frontend`.
+ Path-based promotions will only work when the `Spree::PromotionHandler::Page` class is used, as in `Spree::ContentController` from [spree_rails_frontend](https://github.com/spree/spree_rails_frontend)
 
 A promotion may also have a `usage_limit` attribute set, which restricts how many times the promotion can be used.
 
@@ -26,43 +28,39 @@ A promotion may also have a `usage_limit` attribute set, which restricts how man
 
 There are four actions that come with Spree:
 
-* An order-level adjustment
-* An item-level adjustment
-* Create line items
-* Free shipping
-
-### Creating an Adjustment
-
-When a `CreateAdjustment` action is undertaken, an adjustment is automatically applied to the order, unless the promotion has already applied an adjustment to the order.
-
-Once the adjustment has been applied to the order, its eligibility is re-checked every time the order is saved, by way of the `Promotion#eligible?` method, which uses `Promotion#eligible_rules` to determine if the promotion is still eligible based on its rules. For how this process works, please see the [rules section](promotions#rules) below.
-
-An adjustment to order from a promotion depends on the calculators. For more information about calculators, please see the [Calculators guide](calculators).
-
-### Creating an item adjustment
-
-When a `CreateItemAdjustments` action is undertaken, an adjustment is automatically applied to each item within the order unless the action has already been performed on that line item
-
-The eligibility of the item for this promotion is re-checked whenever the item is updated. Its eligibility is based on the rules of the promotion.
-
-An adjustment to order from a promotion depends on the calculators. For more information about calculators, please see the [Calculators guide](calculators).
-
-### Free Shipping
-
-When a `FreeShipping` action is undertaken, all shipments within the order have their prices negated. Just like with prior actions, the eligibility of this promotion is checked again whenever a shipment changes.
-
-### Create Line Items
-
-When a `CreateLineItem` action is undertaken, a series of line items are automatically added to the order, which may alter the order's price. The promotion with an action to add a line item can also have another action to add an adjustment to the order to nullify the cost of adding the product to the order.
+<AccordionGroup>
+  <Accordion title="Creating an Adjustment">
+    <p>When a <code>CreateAdjustment</code> action is undertaken, an adjustment is automatically applied to the order, unless the promotion has already applied an adjustment to the order.</p>
+    <p>Once the adjustment has been applied to the order, its eligibility is re-checked every time the order is saved, by way of the <code>Promotion#eligible?</code> method, which uses <code>Promotion#eligible_rules</code> to determine if the promotion is still eligible based on its rules. For how this process works, please see the <a href="promotions#rules">rules section</a> below.</p>
+    <p>An adjustment to order from a promotion depends on the calculators. For more information about calculators, please see the <a href="calculators">Calculators guide</a>.</p>
+  </Accordion>
+  <Accordion title="Creating an Item Adjustment">
+    <p>When a <code>CreateItemAdjustments</code> action is undertaken, an adjustment is automatically applied to each item within the order unless the action has already been performed on that line item.</p>
+    <p>The eligibility of the item for this promotion is re-checked whenever the item is updated. Its eligibility is based on the rules of the promotion.</p>
+    <p>An adjustment to order from a promotion depends on the calculators. For more information about calculators, please see the <a href="calculators">Calculators guide</a>.</p>
+  </Accordion>
+  <Accordion title="Free Shipping">
+    <p>When a <code>FreeShipping</code> action is undertaken, all shipments within the order have their prices negated. Just like with prior actions, the eligibility of this promotion is checked again whenever a shipment changes.</p>
+  </Accordion>
+  <Accordion title="Create Line Items">
+    <p>When a <code>CreateLineItem</code> action is undertaken, a series of line items are automatically added to the order, which may alter the order's price. The promotion with an action to add a line item can also have another action to add an adjustment to the order to nullify the cost of adding the product to the order.</p>
+  </Accordion>
+</AccordionGroup>
 
 ### Registering a New Action
 
-You can create a new action for Spree's promotion engine by inheriting from `Spree::PromotionAction`, like this:
+You can create a new action for Spree's promotion engine by creating a new file in `app/models/spree/promotion/actions/` directory, inheriting from `Spree::PromotionAction`, like this:
 
 ```ruby
-class MyPromotionAction < Spree::PromotionAction
-  def perform(options={})
-    ...
+module Spree
+  module Promotion
+    module Actions
+      class MyPromotionAction < Spree::PromotionAction
+        def perform(options={})
+          ...
+        end
+      end
+    end
   end
 end
 ```
@@ -90,14 +88,34 @@ en:
 
 ## Rules
 
-* `FirstOrder`: The user's order is their first.
-* `ItemTotal`: The order's total is greater than \(or equal to\) a given value.
-* `Product`: An order contains a specific product.
-* `User` The order is by a specific user.
-* `UserLoggedIn`: The user is logged in.
-* `One Use Per User`: Can be used only once per customer.
-* `Taxon(s)`: Order includes product\(s\) with taxons that you associate to this rule.
-* `Country`: Ship Address country used for this Order matches the selected Country, eg. US-only Orders
+Here's a list of all the rules that come with Spree:
+
+<AccordionGroup>
+  <Accordion title="FirstOrder">
+    The user's order is their first.
+  </Accordion>
+  <Accordion title="ItemTotal">
+    The order's total is greater than (or equal to) a given value.
+  </Accordion>
+  <Accordion title="Product">
+    An order contains a specific product.
+  </Accordion>
+  <Accordion title="User">
+    The order is by a specific user. Only customers who have an account can use this rule.
+  </Accordion>
+  <Accordion title="UserLoggedIn">
+    The user is logged in.
+  </Accordion>
+  <Accordion title="One Use Per User">
+    Can be used only once per customer. Only customers who have an account can use this rule.
+  </Accordion>
+  <Accordion title="Taxon(s)">
+    Order includes product(s) associated with Taxons that are selected for this rule.
+  </Accordion>
+  <Accordion title="Country">
+    Checks if Order's ship address country matches the selected country, eg. US-only Orders
+  </Accordion>
+</AccordionGroup>
 
 Rules are used by Spree to determine if a promotion is applicable to an order and can be matched in one of two ways: all of the rules must match, or one rule must match. This is determined by the `match_policy` attribute on the `Promotion` object. As you will see in the Admin, you can set the match\_policy to be "any" or "all" of the rules associated with the Promotion. When set to "any" the Promotion will be considered eligible if any one of the rules applies, when set to "all" it will be eligible only if all the rules apply.
 
@@ -133,10 +151,12 @@ If your promotion supports some giving discounts on some line items, but not oth
 
 For example, if you are giving a promotion on specific products only, `eligible?` should return true if the order contains one of the products eligible for promotion, and `actionable?` should return true when the line item specified is one of the specific products for this promotion.
 
-You can then register the promotion using this code inside `config/initializers/spree.rb`:
+To register this new rule add this block in your `config/initializers/spree.rb` file:
 
 ```ruby
-Rails.application.config.spree.promotions.rules << Spree::Promotion::Rules::MyPromotionRule
+Rails.application.config.after_initialize
+  Rails.application.config.spree.promotions.rules << Spree::Promotion::Rules::MyPromotionRule
+end
 ```
 
  Proper location and file name for the rule in this example would be: `app/models/spree/promotion/rules/my_promotion_rule.rb`
@@ -159,4 +179,3 @@ en:
 ```
 
 Restart your application. Once this rule has been registered, it will be available within Spree's admin interface.
-
